// =============================================================================
// Document Management System — Database Schema (DBML)
// =============================================================================
// This schema describes all tables in the DMS database, including the
// Knox auth token table used for token-based authentication.
// =============================================================================

// ---------------------------------------------------------------------------
// Django's built-in auth_user table
// ---------------------------------------------------------------------------
Table auth_user {
  id int [pk, increment]
  username varchar(150) [not null, unique]
  email varchar(254) [not null]
  password varchar(128) [not null]
  is_staff bool [not null]
  is_superuser bool [not null]
  last_login datetime
  first_name varchar(150) [not null]
  last_name varchar(150) [not null]
  is_active bool [not null]
  date_joined datetime [not null]
}

// ---------------------------------------------------------------------------
// Knox AuthToken — token-based authentication
// ---------------------------------------------------------------------------
// Knox stores a one-way hash (digest) of each token rather than the raw
// token string.  The token_key is the first 8 characters of the token,
// used for efficient database lookups.
// ---------------------------------------------------------------------------
Table knox_authtoken {
  digest varchar(128) [pk]
  token_key varchar(25) [not null]
  user_id int [not null]
  created datetime [not null]
  expiry datetime

  indexes {
    (token_key) [name: 'knox_authtoken_token_key_954efaf6']
  }
}

// ---------------------------------------------------------------------------
// AdminProfile — extends Django User for admin-level functionality
// ---------------------------------------------------------------------------
Table adminprofile {
  id bigint [pk, increment]
  user_id int [not null, unique]
  created_at datetime [not null]
}

// ---------------------------------------------------------------------------
// UserProfile — regular (non-admin) application user
// ---------------------------------------------------------------------------
Table userprofile {
  id bigint [pk, increment]
  user_id int [not null, unique]
  created_by_id bigint
  created_at datetime [not null]
}

// ---------------------------------------------------------------------------
// UserGroup — named group of user profiles, created by an admin
// ---------------------------------------------------------------------------
Table usergroup {
  id bigint [pk, increment]
  name varchar(120) [not null, unique]
  description text
  created_by_id bigint [not null]
  created_at datetime [not null]
}

// ---------------------------------------------------------------------------
// UserGroup <-> UserProfile many-to-many through table
// ---------------------------------------------------------------------------
Table usergroup_members {
  id bigint [pk, increment]
  usergroup_id bigint [not null]
  userprofile_id bigint [not null]

  indexes {
    (usergroup_id, userprofile_id) [unique]
  }
}

// ---------------------------------------------------------------------------
// Document — uploaded file owned by a user profile
// ---------------------------------------------------------------------------
Table document {
  id bigint [pk, increment]
  title varchar(255) [not null]
  file varchar(1000) [not null]
  uploaded_by_id bigint [not null]
  group_id bigint
  uploaded_at datetime [not null]
}

// ---------------------------------------------------------------------------
// DocumentShare — tracks sharing of documents with users or groups
// ---------------------------------------------------------------------------
// Note: Exactly one of shared_with_user_id or shared_with_group_id
//       must be non-null (enforced by a CheckConstraint).
// ---------------------------------------------------------------------------
Table documentshare {
  id bigint [pk, increment]
  document_id bigint [not null]
  shared_by_id bigint [not null]
  shared_with_user_id bigint
  shared_with_group_id bigint
  created_at datetime [not null]

  indexes {
    (document_id, shared_with_user_id) [name: 'unique_document_share_user']
    (document_id, shared_with_group_id) [name: 'unique_document_share_group']
  }
}

// =============================================================================
// Relationships
// =============================================================================

// Knox token belongs to a Django User
Ref: knox_authtoken.user_id > auth_user.id [delete: cascade]

// AdminProfile is a one-to-one extension of User
Ref: adminprofile.user_id > auth_user.id [delete: cascade]

// UserProfile is a one-to-one extension of User
Ref: userprofile.user_id > auth_user.id [delete: cascade]

// UserProfile optionally records which admin created it
Ref: userprofile.created_by_id > adminprofile.id [delete: set null]

// UserGroup records which admin created it (protected from delete)
Ref: usergroup.created_by_id > adminprofile.id [delete: restrict]

// UserGroup membership
Ref: usergroup_members.usergroup_id > usergroup.id [delete: cascade]
Ref: usergroup_members.userprofile_id > userprofile.id [delete: cascade]

// Document ownership and optional group association
Ref: document.uploaded_by_id > userprofile.id [delete: cascade]
Ref: document.group_id > usergroup.id [delete: set null]

// DocumentShare relationships
Ref: documentshare.document_id > document.id [delete: cascade]
Ref: documentshare.shared_by_id > userprofile.id [delete: cascade]
Ref: documentshare.shared_with_user_id > userprofile.id [delete: cascade]
Ref: documentshare.shared_with_group_id > usergroup.id [delete: cascade]
